v0.0.4/_sources/generated/gallery/10-gradient-echo/gre_stack_of_stars3D_sequence.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "generated/gallery/10-gradient-echo/gre_stack_of_stars3D_sequence.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_generated_gallery_10-gradient-echo_gre_stack_of_stars3D_sequence.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_generated_gallery_10-gradient-echo_gre_stack_of_stars3D_sequence.py:


=================================
3D stack-of-stars gradient echo
=================================

A slab-selective spoiled excitation is followed by one radial spoke with
Cartesian partition encoding. Gradient and RF spoiling suppress residual
transverse coherence between repetitions. TR and flip angle primarily
determine T1 weighting. Stack-of-stars SPGR is used for motion-robust 3D
structural and dynamic imaging.

.. GENERATED FROM PYTHON SOURCE LINES 12-32








.. GENERATED FROM PYTHON SOURCE LINES 33-38

Baseline
--------

A spoke at every partition, with the spoke set turned from one partition
to the next.

.. GENERATED FROM PYTHON SOURCE LINES 38-46

.. code-block:: Python


    import pypulseqpp as pp
    from pypulseqpp.sequences import gre_stack_of_stars3D_sequence

    baseline = gre_stack_of_stars3D_sequence(n=96, n_z=8, tr=None, n_dummy=0)
    print(f"{baseline.num_blocks} blocks, {baseline.duration()[0]:.2f} s")






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    4832 blocks, 8.84 s




.. GENERATED FROM PYTHON SOURCE LINES 47-49

Sequence diagram
----------------

.. GENERATED FROM PYTHON SOURCE LINES 49-52

.. code-block:: Python


    baseline.paper_plot()




.. image-sg:: /generated/gallery/10-gradient-echo/images/sphx_glr_gre_stack_of_stars3D_sequence_001.png
   :alt: gre stack of stars3D sequence
   :srcset: /generated/gallery/10-gradient-echo/images/sphx_glr_gre_stack_of_stars3D_sequence_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    namespace(diagram=<mrsd.diagram.Diagram object at 0x7f8dc4ab9d90>, tr=305, underlays=[1, 77, 153, 229, 381, 457, 533, 601, 609, 685, 761, 837, 913, 989, 1065, 1141, 1201])



.. GENERATED FROM PYTHON SOURCE LINES 53-57

Sampling order
--------------

The spokes of every partition, over the three k-space axes.

.. GENERATED FROM PYTHON SOURCE LINES 57-60

.. code-block:: Python


    pp.plot.plot_kspace(baseline, color_by="shot")




.. image-sg:: /generated/gallery/10-gradient-echo/images/sphx_glr_gre_stack_of_stars3D_sequence_002.png
   :alt: gre stack of stars3D sequence
   :srcset: /generated/gallery/10-gradient-echo/images/sphx_glr_gre_stack_of_stars3D_sequence_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 605x550 with 2 Axes>



.. GENERATED FROM PYTHON SOURCE LINES 61-66

Angular undersampling
---------------------

Retaining one spoke angle in four reduces the number of repetitions
fourfold. Every acquired spoke samples the origin of its partition.

.. GENERATED FROM PYTHON SOURCE LINES 66-78

.. code-block:: Python


    alternative = gre_stack_of_stars3D_sequence(n=96, n_z=8, ry=4, tr=None, n_dummy=0)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

                       blocks  duration (s)  acquisitions
    Nyquist              4832          8.84          1208
    ry = 4               1216          2.23           304




.. GENERATED FROM PYTHON SOURCE LINES 79-81

.. code-block:: Python

    pp.plot.plot_kspace(alternative, color_by="shot")




.. image-sg:: /generated/gallery/10-gradient-echo/images/sphx_glr_gre_stack_of_stars3D_sequence_003.png
   :alt: gre stack of stars3D sequence
   :srcset: /generated/gallery/10-gradient-echo/images/sphx_glr_gre_stack_of_stars3D_sequence_003.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Figure size 605x550 with 2 Axes>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 5.326 seconds)


.. _sphx_glr_download_generated_gallery_10-gradient-echo_gre_stack_of_stars3D_sequence.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: gre_stack_of_stars3D_sequence.ipynb <gre_stack_of_stars3D_sequence.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: gre_stack_of_stars3D_sequence.py <gre_stack_of_stars3D_sequence.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: gre_stack_of_stars3D_sequence.zip <gre_stack_of_stars3D_sequence.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
